--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ a {
 }
 #logo_information {
 	text-align: center;
+	width: 100%;
 }
 #call {
 	background: #FF8400;
@@ -119,9 +120,12 @@ a {
 	background-color: #FF8400;
 	font-weight: bold;
 }
+#content {
+	width: 100%;
+	height: 1009px;
+}
 #content_left {
-	width: 50%;
-    margin-left: -27px;
+	width: 59%;
     padding-top: 19px;
     float: left;
 }
@@ -163,20 +167,17 @@ a {
     color: white;
     font-size: 22px;
 }
-#content {
-	text-align: center;
-	margin-left: 195px;
-}
 #content_right {
-	width: 50%;
 	float: right;
+	width: 41%;
 }
 .content_right_animation {
-	padding: 10px;
+	width: 51%;
     line-height: 33px;
-    margin-top: -13px;
-    margin-left: -437px;
-    padding-bottom: 62px;
+    float: left;
+    margin-top: 4px;
+    padding-bottom: 59px;
+    text-align: center;
 }
 #up {
 	float: center;
@@ -184,4 +185,35 @@ a {
 .content_right_animation_p {
 	font-weight: 400;
     font-size: 31px;
+}
+.gosts {
+	background-color: rgb(43, 42, 40);
+	width: 100%;
+    padding: 14px;
+    height: 569px;
+}
+.mediamix {
+	text-align: justify;
+}
+
+#gost-caption {
+	color: white;
+    font-size: 28px;
+    text-align: center;
+    padding-bottom: 22px;
+    padding-top: 22px;
+}
+#sertificate {
+	float: left;
+	width: 36%;
+}
+#sertificate-img {
+	float: right;
+}
+#gost-text {
+	float: right;
+	width: 50%;
+}
+.gost-img {
+	padding-bottom: 42px;
 }
